Bolded RQ. Ready for grading

--- a/tt/2025-07-15.qmd
+++ b/tt/2025-07-15.qmd
@@ -12,7 +12,7 @@ Provide sufficient background for readers to grasp your narrative.
 ### Research Question
 
 This week's TidyTuesday brings insights into Brazil's companies, curated by Marcelo Silva with data from Brazil's open CNPJ and the Brazilian Ministry of Finance.
-For the assignment's purposes, I will focus on the following research question: What distinguishes Brazil's highest-capitalized companies from typical firms, and how do legal structure, ownership type, and formal size classifications shape access to significant capital?
+For the assignment's purposes, I will focus on the following research question: **What distinguishes Brazil's highest-capitalized companies from typical firms, and how do legal structure, ownership type, and formal size classifications shape access to significant capital?**
 
 ### Data Import
 
@@ -96,7 +96,9 @@ ggplot(owner_comparison, aes(x = reorder(owner_qualification, percent), y = perc
 
 Who controls the capital in Brazilian business?
 
-Brazil's CNPJ registry tracks millions of companies, including their capital stock (declared share capital). We can understand who controls significant financial resources in Latin America's largest economy. By examining the "capital elite" (top 10% by capital stock, above R\$3930456).
+Brazil's CNPJ registry tracks millions of companies, including their capital stock (declared share capital).
+We can understand who controls significant financial resources in Latin America's largest economy.
+By examining the "capital elite" (top 10% by capital stock, above R\$3930456).
 
 Does size matter for these businesses?
 
