HW 1 ready for grading

--- a/tt/2025-07-15.qmd
+++ b/tt/2025-07-15.qmd
@@ -116,8 +116,7 @@ Directors, Officers, and Presidents are also far more common at the top, suggest
 
 So, what does that mean?
 
-Access to capital in Brazil isn't just about business ideas.
-It's about structure.
+Access to capital in Brazil is based in a foundation of structure.
 Formal size classifications may misdirect policy support, while legal form and ownership type systematically advantage certain organizational arrangements.
 For entrepreneurs seeking investment, these aren't just administrative choices.
 They're strategic decisions with real consequences for accessing the capital that fuels growth.
