ica (only exc 9 left)

--- a/ica/04_adv_maps/code/04-adv-maps-1-notes.qmd
+++ b/ica/04_adv_maps/code/04-adv-maps-1-notes.qmd
@@ -205,6 +205,9 @@ st_crs(mn_cities)
 st_crs(mn_water)
 st_crs(mn_counties) # this one is epsg
 
+mn_counties <- mn_counties |> 
+  st_transform(crs = st_crs(mn_cities))
+
 ```
 
 
@@ -217,7 +220,10 @@ st_crs(mn_counties) # this one is epsg
 - Install the `ggthemes` package, and add the following layer to use a clean map theme: `+ ggthemes::theme_map()`
 
 ```{r}
-
+ggplot(mn_counties) + 
+    geom_sf(fill = "white") + 
+    geom_sf(data = mn_cities, size = 0.2) + 
+    ggthemes::theme_map()
 
 ```
 
@@ -230,17 +236,20 @@ st_crs(mn_counties) # this one is epsg
 ```{r mn_map_add_color}
 ggplot() +
     geom_sf(data = mn_counties, fill = "white") + 
-    geom_sf(data = mn_cities |> filter(Population >= 10000), mapping = aes(color = Population, size = Population)) + # cities layer
-    scale_color_viridis_c() + # continuous (gradient) color scale
-    labs(title = "Minnesota Cities with Population >= 10,000") + 
+    geom_sf(data = mn_cities |> filter(Population >= 10000), mapping = aes(color = Population, size = Population)) + 
+    scale_color_viridis_c() + 
+    labs(title = "MN City Population >= 10,000") + 
     ggthemes::theme_map() +
-    theme(legend.position = "bottom") # move legend
+    theme(legend.position = "bottom")
 ```
 
 Look up the `scale_color_viridis_c()` documentation via the [ggplot2 reference](https://ggplot2.tidyverse.org/reference/scale_viridis.html).
 
 - Read the function description at the top. What is the advantage of using this function for making color palettes?
+- They are uniform in both color and black and white.
+- It allows for effective and accessible data viz. The colors are color-blind friendly.
 - Look through the examples section. What is the difference between the `_d()`, `_c()`, and `_b()` variants of this function?
+- d is for discrete (categorical), c is for continuous (numerical), and b is for binned.
 
 
 
@@ -270,7 +279,15 @@ Build on our existing map by adding a raster layer for elevation as the backgrou
 - Add in the layers from the map above to show the largest cities and the county outlines. To remove a background color, use `fill = NA`.
 
 ```{r}
-
+ggplot() +
+    geom_raster(data = elev_df, aes(x = x, y = y, fill = elevation)) + 
+    scale_fill_gradient(low = "darkgreen", high = "white", guide = FALSE) +
+    geom_sf(data = mn_counties, fill = NA, color = "black") + 
+    geom_sf(data = mn_cities |> filter(Population >= 10000), mapping = aes(color = Population, size = Population)) + 
+    scale_color_viridis_c() + 
+    labs(title = "MN City Population >= 10,000") + 
+    ggthemes::theme_map() +
+    theme(legend.position = "bottom")
 
 ```
 
